[package]
name = "comics_archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
clap = { version = "4.5.1", features = ["derive"] }
humantime = "2.1.0"
image = "0.24.9"
indicatif = "0.17.8"
liblzma = {version = "0.3", features = ["parallel", "tokio"]}
rayon = "1.9.0"
tokio = {version = "1.36.0", features = ["full"]} 
walkdir = "2.4.0"
zip = "0.6.6"
#xz2 = "0.1.7"
